--- a/templates/seccess.html
+++ b/templates/seccess.html
@@ -7,10 +7,10 @@
 <body>
 
 
-<a href="{% url 'index' %}"><h1><a>Home</a></h1></a>
+<a href="{% url 'index' %}"><h1>Home</a></h1></a>
 
 
-<h1>To'lov muvafaqiyatli tugadi!!</h1>
+<h1>To'lov muvafaqiyatli amalga oshirildi!!</h1>
 
 
 
