--- a/templates/login.html
+++ b/templates/login.html
@@ -64,7 +64,7 @@
         <nav class="navigation d-flex align-items-center">
             <div class="container">
                 <div class="row">
-                    <div class="col-2"><a class="logo" href="index.html"><img
+                    <div class="col-2"><a class="logo" href="{% url 'index' %}"><img
                             src="{% static 'assets/images/logo.jpg' %}" alt=""
                             style="width:70px"></a>
                     </div>
