--- a/templates/shop_detail.html
+++ b/templates/shop_detail.html
@@ -63,7 +63,7 @@
         <nav class="navigation d-flex align-items-center">
             <div class="container">
                 <div class="row">
-                    <div class="col-2"><a class="logo" href="#"><img src="{% static 'assets/images/logo.jpg' %}" alt=""
+                    <div class="col-2"><a class="logo" href="{% url 'index' %}"><img src="{% static 'assets/images/logo.jpg' %}" alt=""
                                                                      style="width:70px"></a>
                     </div>
                     <div class="col-8">
